--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 
 <body>
-    <button id="btn1">显示控件啊啊</button>
+    <button id="btn1">显示控件</button>
     <div id="div1">
         <div id="div2"></div>
     </div>
